Fixed collapse icon style when folder is not clickable.

--- a/app/styles/_list.scss
+++ b/app/styles/_list.scss
@@ -243,6 +243,9 @@ ul.list {
     }
     ul.list{
         li{
+            span {
+                padding-left: 25px;
+            }
             a.read{
                 padding-left: 25px;
             }
